@@ -1,3 +1,9 @@
+2012-04-20 Riccardo Mottola <rm@gnu.org>
+
+	* TarArchive.m:
+	Swap order of arguments and skip empty arguments which confuse
+	BSD tar.
+
 2012-02-29 Riccardo Mottola <rm@gnu.org>
 
 	* ZipperCell.[h,m]
